# Counterfactual_Project

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RESULTS.md  analyze_decision_boundary.py  generate_cross_dataset_plots.py  pyproject.toml  requirements.txt  run_acs_comparison.py  run_acs_comparison_rf.py  run_acs_experiment.py  run_acs_experiment_rf.py  run_adult_comparison.py  run_adult_comparison_rf.py  run_adult_experiment.py  run_adult_experiment_rf.py  run_adult_glance_rf_only.py  setup.py
data/: README.md
results/wachter/: results.pkl
results_acs/: dataset_info.txt
results_acs/comparison/: comparison_report.txt  comparison_report_acs.txt  metrics_summary.json
results_acs_rf/: dataset_info.txt
results_acs_rf/comparison/: comparison_report.txt
results_adult/: dataset_info.txt
results_adult/comparison/: comparison_report.txt  metrics_summary.json
results_adult_rf/: dataset_info.txt
results_adult_rf/comparison/: comparison_report.txt  metrics_summary.json
results_combined/: RESULTS_4WAY.md  _data.py  build_figures.py  build_report.py  four_way_report.txt
src/: __init__.py  acs_data_loader.py  classifiers.py  comparison_analysis.py  config.py  counterfactual_base.py  data_loader.py  facts_fairness.py  glance_method.py  wachter_method.py
tests/: __init__.py  test_comparison_analysis.py  test_config.py  test_facts_fairness.py  test_wachter_method.py
